meecast (0.5.4) unstable; urgency=low

  * Added stations to foreca.com database (Poland, Ukraine, Moldova, Latvia,
    Lithuania, Estonia, Romania, Norway, Denmark, Netherlands, Greece)
  * Fixed problem with wind direction in source gismeteo.ru
  * Added icons and descriptions for foreca.com data
  * Updated Russian translation

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 25 Mar 2011 22:42:23 +0200

meecast (0.5.3) unstable; urgency=low

  * Fixed problem with gismeteo.ru
  * Fixed problem with Current weather for weather.com
  * Added stations to foreca.com database (Bulgaria)
  * Updated Germany translation

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 17 Mar 2011 22:42:23 +0200

meecast (0.5.2) unstable; urgency=low

  * Added station Juankoski to yr.no database
  * Fixed problem with long station name in events widget
  * Updated Russian translation
  * Added new source foreca.com

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 3 Mar 2011 12:42:23 +0200

meecast (0.5.1) unstable; urgency=low

  * Fixed problem with negative temperatures in source gismeteo.ru 
  * Fixed problem with long station name in events, lockscreen and standby widget 

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 23 Feb 2011 22:42:23 +0200

meecast (0.5) unstable; urgency=low

  * Changed font to Nokia Pure for Lock Screen and StandbyScreen 
  * Fixed problem with disabling Meecast widget in StandbyScreen
  * Updated Russian translation

 -- Vlad Vasiliev <vlad@gas.by>  Wed, 22 Feb 2011 15:42:23 +0200

meecast (0.4.9) unstable; urgency=low

  * Fixed problem with lockscreen widget and wallpaper images with various dpi 
  * Fixed problem with temperature in Farenheit unit and autoupdating
  * Updated Germany, Polish, Swedish translations
  * Added hours forecast for source gismeteo.ru
  * Rewrote events widget
  * Added StandbyScreen widget

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 18 Feb 2011 22:42:23 +0200

meecast (0.4.8) unstable; urgency=low

  * Added stations in yr.no database (Mexico, Netherland, Bulgaria)